[package]
name = "calcount"
version = "0.1.0"
edition = "2021"

[features]
default = ["stripe"]
production = ["stripe", "enable_smtp_email"]
live_reload = []
use_stripe_test_instance = ["stripe"]
enable_smtp_email = []
stripe = []
localhost_base_url = []

[dependencies]
ammonia = "3.3.0"
anyhow = "1.0.69"
async-trait = "0.1.73"
axum = "0.7.5"
axum-macros = "0.4.1"
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = { version = "0.8.4", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.28"
futures-util = "0.3.29"
hex = "0.4.3"
hmac = "0.12.1"
hyper = "1.4.1"
lettre = { version = "0.11.2", default-features = false, features = [ "builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls" ] }
markdown = "1.0.0-alpha.12"
rand = "0.8.5"
regex = "1.9.1"
reqwest = { version = "0.11.23", features = ["rustls-tls", "json"], default-features = false }
rustls = "0.21.7"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sha2 = "0.10.7"
sqlx = { version = "0.8.1", features = ["json", "postgres", "uuid", "chrono", "runtime-async-std-rustls" ] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = "0.5.2"
uuid = { version = "1.3.0", features = ["v4"] }
